fix: hide scrollbar for Firefox

--- a/src/styles/global/global.scss
+++ b/src/styles/global/global.scss
@@ -135,6 +135,8 @@ img {
   margin-bottom: $space-default;
   overflow-y: auto;
   white-space: nowrap;
+  // Hide scrollbar for Firefox
+  scrollbar-width: none;
 
   .nav-item {
     display: inline-block;
@@ -155,6 +157,7 @@ img {
 }
 
 .nav-tabs::-webkit-scrollbar {
+  // Hide scrollbar for Chrome, Safari and Opera
   display: none;
 }
 
